Updated changes in project for page is showing in multiple language

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,12 +9,11 @@ spring:
     password: Admin@123456
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
       dialect: org.hibernate.dialect.MySQL5Dialect
       show-sql=true:
-
 
 
 
