--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,16 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>6.1.5.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloud-translate</artifactId>
+			<version>1.94.5</version>
+		</dependency>
 
 	</dependencies>
 
